# MpRpc

./: CMakeLists.txt  README.md  main.cpp
example/: CMakeLists.txt  user.proto  userservice.cc
example/Callee/: CMakeLists.txt  userservice.cc
example/Caller/: CMakeLists.txt  calluserService.cc
src/: logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcheader.proto  rpcprovider.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
test/protobuf/: a.out  test.pb.cc  test.pb.h  test.proto
